@@ -4,6 +4,9 @@
 2021-05-05 Alan Grossfield <alan>
 	* fixed bug in reading TinkerArc files with periodic boxes
 
+2021-04-26 Alan Grossfield <alan>
+	* add new tool contact_distance (like rmsds, but in residue contact space)
+
 2021-04-08 Alan Grossfield <alan>
     * add frameBoundaries to VirtualTrajectory
 
